# AdminX

./: README.md  config.yml  pyproject.toml
src/: loader.py  main.py
src/config/: base_config.py  databases_config.py  docs_config.py  logging_config.py  server_config.py
src/config/yml_schema/: schema.py
src/config/yml_schema/schema_fields/: databases.py  docs.py  logging.py  server.py
src/core/database/: setup.py
src/core/db/: setup.py
src/core/db/models/: __init__.py  schema_models.py
src/core/schemas/: setup.py
src/setup/db/connection/: __init__.py  core.py
src/setup/db/connection/fields/: engine.py  metadata.py  sessionmaker.py  url.py
src/setup/schema/: base.py  database.py  field.py  field_constraints.py  field_widget.py  table.py
src/utils/: database.py  misc.py  setup.py
src/utils/database/: database_manager.py  engine.py  manager.py  metadata.py  sessionmaker.py  url.py
